// define version
syntax = "proto3";

package todoPackage;

option go_package = "./todoProto";

// define service
service Todo{
    // define method
    rpc createTodo( TodoItem ) returns ( TodoItem );
    rpc readTodos(void) returns (TodoItems);
    rpc readTodosStream(void) returns (stream TodoItem);
}

// need to define void
message void {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

// use repeated for array
message TodoItems{
    repeated TodoItem items = 1;
}